fix giscus spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -264,3 +264,7 @@ blockquote {
 		background-position: 0% 50%;
 	}
 }
+
+.giscus {
+  margin-top: 1em;
+}
